# lib-n5

./: CMakeLists.txt
include/n5/: alloc.h  format.h  n5.h  slice.h  str.h  string.h  utils.h
include/n5/core/: alloc.h  utils.h
src/: tests.c
src/n5/: alloc.c  format.c  n5.c  str.c  string.c
src/n5/core/: alloc.c
